fixed some layout issues. started implementing imprint

--- a/src/index.css
+++ b/src/index.css
@@ -33,12 +33,22 @@ section {
   padding: 50px 30px;
 }
 
+footer {
+  background-color: #343741;
+  color: white;
+  min-height: 100px;
+}
+
 section:nth-child(odd) {
   background-color: #f2f3f4;
 }
 
 main p, section p {
   font-size: 1.5em;
+}
+
+.contact__content p {
+  font-size: 1.2em;
 }
 
 @media only screen and (min-width: 600px) {
@@ -224,12 +234,12 @@ main {
   flex-direction: column;
 }
 
-.references__headline, .law__headline, .company__headline, .contact__headline {
+.references__headline, .law__headline, .company__headline, .contact__headline, .imprint__headline {
   width: 100%;
   text-align: center;
 }
 
-.references__headline h2, .law__headline h2, .company__headline h2, .contact__headline h2 {
+.references__headline h2, .law__headline h2, .company__headline h2, .contact__headline h2, .imprint__headline h2 {
   margin-bottom: 30px;
 }
 
@@ -332,6 +342,66 @@ main {
 
 .contact__content-item p:first-child {
   font-weight: bold;
-  margin: 0 35px 0 0;
-  min-width: 113px;
+  margin: 0 15px 0 0;
+  min-width: 90px;
+}
+
+.imprint button {
+  border: none;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  font-size: 1.2em;
+  text-align: center;
+}
+.socialMedia {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 30px
+}
+
+.socialMedia img {
+  width: 32px;
+}
+
+.socialMedia div a:first-child {
+  margin: 0 25px 0 0;
+}
+
+.imprint__content {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  color: black;
+  display: none;
+  overflow: auto;
+}
+
+.imprint__headline h2 {
+  font-size: 2em;
+}
+
+.imprint__content-close {
+  width: 100%;
+  text-align: right;
+  padding: 15px;
+}
+
+.imprint__content-close img {
+  width: 25px; 
+  cursor: pointer;
+}
+
+.imprintModal {
+  width: 100%;
+  text-align: center;
+  padding: 0 0 25px 0%;
+}
+
+.openImprint {
+  display: block;
 }
